--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-PORT=process.env.PORT || 5000
+PORT=5000
 MONGO_URI=mongodb+srv://omer:omer1103@cluster0.4otpp.mongodb.net/FitnessApp?retryWrites=true&w=majority
