--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Fitness App",
     "short_name": "Fitness App",
-    "start_url": "/?home=true",
+    "start_url": "/",
     "icons": [
         {
           "src": "icons/manifest-icon-192.png",
