--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,6 +18,6 @@
     ],
     "theme_color": "#4996da",
     "background_color": "#4996da",
-    "display": "fullscreen",
+    "display": "standalone",
     "orientation": "portrait"
 }
